correct scripts